--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-          <img src="Images/Me.jpg" widht="10">
+          <img src="Images/Me.jpg" width="10" align="right">
 
           {% if site.show_downloads %}
             <section id="downloads">
