--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
             <!--<a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>-->
           {% endif %}
           
-          <img src="Images/Me.jpg" width="200" align="top">
+          <img src="Images/Me.jpg" width="200" align="right">
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           
@@ -47,7 +47,7 @@
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p> F.M.TorzewskaATleeds.ac.uk. _School of Mathematics, University of Leeds, Leeds,_ LS2 9JT, UK. </p>
       </footer>
     </div>
 
