--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,8 @@
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p> F.M.TorzewskaATleeds.ac.uk. _School of Mathematics, University of Leeds, Leeds,_ LS2 9JT, UK. </p>
+        <p> F.M.TorzewskaATleeds.ac.uk. <br> 
+        <em>School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p>
       </footer>
     </div>
 
