--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,20 @@
           {% endif %}
         </header>
     </div>
+    
+    <!-- Navbar -->
+    <div class="nav">
+<nav>
+  <ul>
+    <li><a href="index.md" id="intro">Home</a></li>
+    <li><a href="research.md" id="research">Research</a></li>
+
+..etc..
+
+  </ul>
+  </nav>
+</div>
+</html>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
