--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,8 @@
     <div class="nav">
 <nav>
   <ul>
-    <li><a href="index.md" id="intro">Home</a></li>
-    <li><a href="research.md" id="research">Research</a></li>
+    <li><a href="https://fionatorzewska.github.io/" id="intro">Home</a></li>
+    <li><a href="https://fionatorzewska.github.io/research" id="research">Research</a></li>
 
 ..etc..
 
