--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-  {% include head.html %}
+  <!--{% include head.html %}-->
 
   <body>
 
-    {% include sidebar.html %}
+   <!--{% include sidebar.html %}-->
 
     <div class="content container">
       {{ content }}
