--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead">{{ site.description }}</p>
+      <p class="lead"> F.M.Torzewska 'at' leeds.ac.uk </p>
     </div>
 
     <nav class="sidebar-nav">
@@ -27,7 +27,7 @@
       {% endfor %}
 
    
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      <!--- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> --->
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
