--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead"> F.M.Torzewska 'at' leeds.ac.uk </p>
+      <p <!---class="lead"---> > F.M.Torzewska 'at' leeds.ac.uk </p>
     </div>
 
     <nav class="sidebar-nav">
