--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<meta name="google-site-verification" content="Xh9AN6dqVrMwx6reUQNiYjrejxXse9TzRMsFppDX7dw" />
+  
   {% include head.html %}
   
   <body>
