--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,14 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <img src="Images/Me.jpg" width="200" align="right">
       <h1>
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
         </a>
       </h1>
-      <p size=small > F.M.Torzewska 'at' leeds.ac.uk </p>
+      <p size=small> F.M.TorzewskaATleeds.ac.uk <br> 
+        <em>School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p>
     </div>
 
     <nav class="sidebar-nav">
