--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,14 +1,13 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src="Images/Me.jpg" width="200" align="right">
-      <h1>
+      <img src="Images/Me.jpg" width="200" align="centre">
+      <h1 size=small>
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
         </a>
       </h1>
-      <p size=small> F.M.TorzewskaATleeds.ac.uk <br> 
-        <em>School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p>
+      <p size=small> F.M.TorzewskaATleeds.ac.uk <\p> 
     </div>
 
     <nav class="sidebar-nav">
@@ -32,6 +31,7 @@
       <!--- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> --->
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+   <!--- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> --->
+      <p size="-2">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p>
   </div>
 </div>
