--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
           {{ site.title }}
         </a>
       </h1>
-      <p size=small> F.M.TorzewskaATleeds.ac.uk <\p> 
+      <p font-size="-3"> F.M.TorzewskaATleeds.ac.uk </p> 
     </div>
 
     <nav class="sidebar-nav">
