--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,13 +1,13 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src="Images/Me.jpg" width="200" align="centre">
-      <h1 size=small>
+      <img src="Images/Me.jpg" width="200" align="middle">
+      <h1 style="font-size:50%">
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
         </a>
       </h1>
-      <p style="font-size:50%"> F.M.TorzewskaATleeds.ac.uk </p> 
+      <p > F.M.TorzewskaATleeds.ac.uk </p> 
     </div>
 
     <nav class="sidebar-nav">
@@ -32,6 +32,6 @@
     </nav>
 
    <!--- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> --->
-      <p size="-2">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p>
+      <p style="font-size:50%">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p>
   </div>
 </div>
