--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src="Images/Me.jpg" width="200" align="middle">
-      <h1 style="font-size:50%">
+      <img src="Images/Me.jpg" width="200" align="top">
+      <h1 style="font-size:80%">
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
         </a>
