--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,7 @@
 <div class="sidebar">
+  <div class="sidebar-about">
   <p > <img src="Images/Me.jpg" width="200" align="middle"> </p>
+  </div>
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1 style="font-size:180%">
