--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-  <div class="sidebar-about">
+  <div class="container">
   <p > <img src="Images/Me.jpg" width="200" align="middle"> </p>
   </div>
   <div class="container sidebar-sticky">
