--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,9 @@
 <div class="sidebar">
   <div class="container">
-  <p style="text-align=center"> <img src="fionatorzewska.github.io/Images/Me.jpg" width="200" align="middle"> </p>
+  <p style="text-align=center"> 
+    <img src='{{"../Images/Me.jpg" | absolute_url}}'>
+    {% <img src="/Images/Me.jpg" width="200" align="middle">  %}
+    </p>
   </div>
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
