--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container">
   <p style="text-align=center"> 
     <img src='{{"../Images/Me.jpg" | absolute_url}}'>
-    {% <img src="/Images/Me.jpg" width="200" align="middle">  %}
+    <!--<img src="/Images/Me.jpg" width="200" align="middle"> -->
     </p>
   </div>
   <div class="container sidebar-sticky">
