--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container">
   <p style="text-align=center"> 
-    <img src='{{"../Images/Me.jpg" | absolute_url}}'>
+    <img src='{{"/Images/Me.jpg" | absolute_url}}'>
     <!--<img src="/Images/Me.jpg" width="200" align="middle"> -->
     </p>
   </div>
