--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,10 @@
 <div class="sidebar">
-  <div class="container">
+  <div class="container sidebar-sticky">
+    <div class="container">
   <p style="text-align=center"> 
-    <img src='{{"/Images/Me.jpg" | absolute_url}}'>
-    <!--<img src="/Images/Me.jpg" width="200" align="middle"> -->
+    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me">
     </p>
   </div>
-  <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1 style="font-size:180%">
         <a href="{{ '/' | relative_url }}">
