--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -116,10 +116,12 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
     .sidebar-sticky{
-        bottom:1rem;
+          position: absolute;
+          right:  1rem;
+          bottom: 1rem;
+          left:   1rem;
         overflow-y:auto;
         overflow-x:hidden;
-        height:100%;
     }
 }
 
