--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -105,16 +105,16 @@ a.sidebar-nav-item:focus {
  * contents to the bottom of the sidebar in tablets and up.
  */
 
-<!-- original verison: @media (min-width: 48em) {
+ @media (min-width: 48em) {
   .sidebar-sticky {
     position: absolute;
     right:  1rem;
     bottom: 1rem;
     left:   1rem;
   }
-} -->
+} 
 
-@media (min-width: 48em) {
+<!-- @media (min-width: 48em) {
     .sidebar-sticky{
           position: absolute;
           right:  1rem;
@@ -122,7 +122,7 @@ a.sidebar-nav-item:focus {
           left:   1rem;
         overflow-y:auto;
     }
-}
+}-->
 
 
 /* Container
