--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
-<div class="sidebar">
-  <div class="container sidebar-sticky">
+<div class="sidebar" overflow-y:auto>
+  <div class="container sidebar-sticky"  >
     <div class="container">
   <p style="text-align=center"> 
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me">
