--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,10 @@
 <div class="sidebar" overflow-y:auto>
-  <div class="container sidebar-sticky"  >
-    <div class="container">
-  <p style="text-align=center"> 
+   <div class="image">
+  <!-- <p style="text-align=center"> -->
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me">
-    </p>
+   <!-- </p> -->
   </div>
+  <div class="container sidebar-sticky"  >
     <div class="sidebar-about">
       <h1 style="font-size:180%">
         <a href="{{ '/' | relative_url }}">
