--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,11 @@
 <div class="sidebar" overflow-y:auto>
+   <div class="container">
    <div class="image">
   <!-- <p style="text-align=center"> -->
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me">
    <!-- </p> -->
   </div>
+   </div>
   <div class="container sidebar-sticky"  >
     <div class="sidebar-about">
       <h1 style="font-size:180%">
