--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar" overflow-y:auto>
-   <div class="container">
+   <div class="container" padding-bottom: 50px>
    <div class="image">
   <!-- <p style="text-align=center"> -->
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me">
