--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar" overflow-y:auto>
   <div class="container sidebar-sticky"  >
-      <div class="container" vertical align: top>
+      <div class="container" top:0>
    <div class="image">
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me">
   </div>
