--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,8 @@
 <div class="sidebar" overflow-y:auto>
-  <div class="container sidebar-sticky"  >
+  <div class="container sidebar-sticky"  overflow-y:auto>
       <div class="container">
-    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me">
+        <p >
+          <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me"> </p>
    </div>
     <div class="sidebar-about">
       <h1 style="font-size:180%">
