--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
-<div class="sidebar" overflow-y:auto>
-  <div class="container sidebar-sticky"  overflow-y:auto>
+<div class="sidebar">
+  <div class="container sidebar-sticky" >
       <div class="container">
         <p >
           <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me"> </p>
