--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -67,6 +67,7 @@ html {
     bottom: 0;
     width: 18rem;
     text-align: left;
+    overflow-y:auto
   }
 }
 
@@ -105,16 +106,16 @@ a.sidebar-nav-item:focus {
  * contents to the bottom of the sidebar in tablets and up.
  */
 
- <!-- Original version @media (min-width: 48em) {
+ @media (min-width: 48em) {
   .sidebar-sticky {
     position: absolute;
     right:  1rem;
     bottom: 1rem;
     left:   1rem;
   }
-} -->
+}
 
- @media (min-width: 48em) {
+ <!-- @media (min-width: 48em) {
     .sidebar-sticky{
           position: absolute;
           right:  1rem;
@@ -122,7 +123,7 @@ a.sidebar-nav-item:focus {
           left:   1rem;
         overflow-y:auto;
     }
-}
+}-->
 
 
 /* Container
