--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -67,7 +67,6 @@ html {
     bottom: 0;
     width: 18rem;
     text-align: left;
-    overflow-y:auto
   }
 }
 
@@ -106,24 +105,24 @@ a.sidebar-nav-item:focus {
  * contents to the bottom of the sidebar in tablets and up.
  */
 
- @media (min-width: 48em) {
+ <!-- Original version @media (min-width: 48em) {
   .sidebar-sticky {
     position: absolute;
     right:  1rem;
     bottom: 1rem;
     left:   1rem;
   }
-}
+}-->
 
- <!-- @media (min-width: 48em) {
+  @media (min-width: 48em) {
     .sidebar-sticky{
-          position: absolute;
+         <!-- position: absolute; -->
           right:  1rem;
           bottom: 1rem;
           left:   1rem;
         overflow-y:auto;
     }
-}-->
+}
 
 
 /* Container
