--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,6 +35,6 @@
     </nav>
 
    <!--- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> --->
-      <p style="font-size:50%">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p>
+      <p style="font-size:50%"; position=absolute; bottom=0>School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p>
   </div>
 </div>
