--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
           <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me"> </p>
    </div>
     <div class="sidebar-about">
-      <h1 style="font-size:180%">
+      <h1 style="font-size:180%"; position=relative;>
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
         </a>
