--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -116,7 +116,9 @@ a.sidebar-nav-item:focus {
 
   @media (min-width: 48em) {
     .sidebar-sticky{
-        top:1rem;
+            right:  1rem;
+            bottom: 1rem;
+            left:   1rem;
         overflow-y:auto;
         overflow-x:hidden;
         height:100%;
