--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky" >
       <div class="container">
         <p >
-          <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me"> </p>
+          <img src='{{"/Images/Me.jpg" | absolute_url}}'; alt="Me"; left=0> </p>
    </div>
     <div class="sidebar-about">
       <h1 style="font-size:180%"; position=relative;>
