--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,10 +2,10 @@
   <div class="container sidebar-sticky" >
       <div class="container">
         <p >
-          <img src='{{"/Images/Me.jpg" | absolute_url}}'; alt="Me"; left=0> </p>
+          <img src='{{"/Images/Me.jpg" | absolute_url}}'; alt="Me"; display:block; margin-left: auto; margin-right:auto> </p>
    </div>
     <div class="sidebar-about">
-      <h1 style="font-size:180%"; position=relative;>
+      <h1 style="font-size:180%"; position: relative;>
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
         </a>
