--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
   <div class="container sidebar-sticky" >
-      <div class="container">
+      <div class="container" display:block; margin-left: auto; margin-right:auto>
         <p >
-          <img src='{{"/Images/Me.jpg" | absolute_url}}'; alt="Me"; display:block; margin-left: auto; margin-right:auto> </p>
+          <img src='{{"/Images/Me.jpg" | absolute_url}}'; alt="Me"> </p>
    </div>
     <div class="sidebar-about">
       <h1 style="font-size:180%"; position: relative;>
