--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,13 @@
 <div class="sidebar">
   <div class="container sidebar-sticky" >
-      <div class="container" display:block; margin-left: auto; margin-right:auto>
-        <p >
-          <img src='{{"/Images/Me.jpg" | absolute_url}}'; alt="Me"> </p>
+      <div class="container">
+        .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+          <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" class=center> 
    </div>
     <div class="sidebar-about">
       <h1 style="font-size:180%"; position: relative;>
