--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,10 @@
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 <div class="sidebar">
   <div class="container sidebar-sticky" >
       <div class="container">
