--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,14 +1,7 @@
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
 <div class="sidebar">
   <div class="container sidebar-sticky" >
       <div class="container">
-          <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" class=center> 
+          <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="display: block; margin-left: auto; margin-right: auto; width:50%;"> 
    </div>
     <div class="sidebar-about">
       <h1 style="font-size:180%"; position: relative;>
