--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,8 @@
 <div class="sidebar">
   <div class="container sidebar-sticky" >
+    <div style="text-align: left"> 
+    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="display: block; width:75%;"> </div>
     <div class="sidebar-about">
-      <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="display: block; margin-left: auto; margin-right: auto; width:75%;"> 
       <h1 style="font-size:180%"; position: relative;>
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
