--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,6 @@
           {{ site.title }}
         </a>
       </h1>
-      <p > F.M.TorzewskaATleeds.ac.uk </p> 
     </div>
 
     <nav class="sidebar-nav">
@@ -33,6 +32,6 @@
     </nav>
 
    <!--- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> --->
-      <p style="font-size:50%; position: absolute; bottom: 0">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p>
+      <p style="position: absolute; bottom: 0"> <p > F.M.TorzewskaATleeds.ac.uk </p> <p style="font-size:50%">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p> </p>
   </div>
 </div>
