--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
   <div class="container sidebar-sticky" >
     <div class="sidebar-about">
-      <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" <!--style="display: block; width:75%;"-->> 
-      <h1 style="font-size:180%"; position: relative;>
+      <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > 
+      <h1 style="font-size:180%;">
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
         </a>
