--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
-  <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > 
-  <div class="container sidebar-sticky" >
+  <div class="container sidebar-sticky" >#
+    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > 
     <div class="sidebar-about">
       <h1 style="font-size:180%;">
         <a href="{{ '/' | relative_url }}">
