--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,12 @@
+@media (max-width: 48em) {
+  .sidebarimage {
+    text-align: center;
+  }
+
 <div class="sidebar">
   <div class="container sidebar-sticky" >
-    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > 
+    <div class="sidebarimage">
+    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > </div>
     <div class="sidebar-about">
       <h1 style="font-size:180%;">
         <a href="{{ '/' | relative_url }}">
