--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -69,6 +69,10 @@ html {
     text-align: left;
   }
 }
+@media (max-width: 48em) {
+  .sidebarimage {
+    text-align: center;
+  }}
 
 /* Sidebar links */
 .sidebar a {
