--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,8 +2,12 @@
 
 <div class="sidebar">
   <div class="container sidebar-sticky" >
-    <div class="sidebarimage">
-    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > </div>
+    @media (max-width: 48em) {
+    <div style="text-align: center">
+    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > 
+    </div>}
+    @media (min-width: 48em){
+    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > }
     <div class="sidebar-about">
       <h1 style="font-size:180%;">
         <a href="{{ '/' | relative_url }}">
