--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,11 +2,11 @@
 
 <div class="sidebar">
   <div class="container sidebar-sticky" >
-    @media (max-width: 48em) {
+    @media screen and (max-width: 48em) {
     <div style="text-align: center">
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > 
     </div>}
-    @media (min-width: 48em){
+    @media screen and (min-width: 48em){
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > }
     <div class="sidebar-about">
       <h1 style="font-size:180%;">
