--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <style>
-@media screen and (maxwidth:48em)
+@media (max-width: 48em)
 {
 #sidebarimage{
 text-align: center;}
@@ -8,7 +8,6 @@ text-align: center;}
 
 <div class="sidebar">
   <div class="container sidebar-sticky" >
-    @media screen and (max-width: 48em) {
     <div id="sidebarimage">
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > 
     </div>
