--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@ text-align: center;}
 
 <div class="sidebar">
   <div class="container sidebar-sticky" >
-    <div id="sidebarimage">
+    <div class="sidebarimage">
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > 
     </div>
     <div class="sidebar-about">
