--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,15 +1,15 @@
 <style>
 .sidebarimage{
-  background: blue
+  background: blue;
   width: 100%;
 text-align: center;}
 </style>
 
 <div class="sidebar">
-  <div class="container sidebar-sticky" >
-    <div class="sidebarimage">
+   <div class="sidebarimage">
     <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:75%;" > 
     </div>
+  <div class="container sidebar-sticky" >
     <div class="sidebar-about">
       <h1 style="font-size:180%;">
         <a href="{{ '/' | relative_url }}">
