--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,9 @@
 .sidebarimage{
   background: blue;
   width: 100%;
-text-align: center;}
+text-align: center;
+  display:flex;
+  justify-content:center;}
 </style>
 
 <div class="sidebar">
