--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,10 @@
 <style>
+  @media (max-width: 48em) {
 .sidebarimage{
   background: blue;
   width: 100%;
-text-align: center;
   display:flex;
-  justify-content:center;}
+  justify-content:center;}}
 </style>
 
 <div class="sidebar">
