--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,7 @@
   @media (max-width: 48em) {
 .sidebarimage{
   width: 75%;
+  margin: auto;
   display:flex;
   justify-content:center;}}
 </style>
