--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky" >
     <div class="sidebarimage">
-    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:100%;" > 
+    <img src='{{"/Images/Me.jpg" | absolute_url}}' alt="Me" style="width:85%;" > 
     </div>
     <div class="sidebar-about">
       <h1 style="font-size:180%;">
@@ -42,6 +42,6 @@
     </nav>
 
    <!--- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> --->
-      <p style="position: absolute; bottom: 0"> <p > F.M.TorzewskaATleeds.ac.uk </p> <p style="font-size:50%">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </p> </p>
+      <p style="position: absolute; bottom: 0"> F.M.TorzewskaATleeds.ac.uk <span style="font-size:50%;">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </span> </p>
   </div>
 </div>
