--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,6 +42,6 @@
     </nav>
 
    <!--- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> --->
-      <p style="position: absolute; bottom: 0"> F.M.TorzewskaATleeds.ac.uk <br> <span style="font-size:50%;">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </span> </p>
+      <p style="position: absolute; bottom: 0; background-color: #202020"> F.M.TorzewskaATleeds.ac.uk <br> <span style="font-size:50%;">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </span> </p>
   </div>
 </div>
