--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,10 +40,9 @@
    
       <!--- <span class="sidebar-nav-item">Currently v{{ site.version }}</span> --->
     </nav>
-
+<\div>
    <!--- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> --->
-    <div style="position: absolute; bottom: 0; background-color: rgba(255,255,255,.5);">
+    <div style="position: absolute; bottom: 0; background-color: #ac4142;">
       <p> F.M.TorzewskaATleeds.ac.uk <br> <span style="font-size:50%;">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </span> </p>
 </div>
-  </div>
 </div>
