--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,6 +5,8 @@
   margin: auto;
   display:flex;
   justify-content:center;}}
+  @media (min-width: 48em) {
+.personalinfo{position: absolute; bottom: 0; background-color: #ac4142;}}
 </style>
 
 <div class="sidebar">
@@ -42,7 +44,7 @@
     </nav>
 </div>
    <!--- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> --->
-    <div style="position: absolute; bottom: 0; background-color: #ac4142;">
+    <div class="personalinfo">
       <p> F.M.TorzewskaATleeds.ac.uk <br> <span style="font-size:50%;">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </span> </p>
 </div>
 </div>
