--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,6 +24,7 @@
 
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
+       <a class="sidebar-nav-item" href="conferences.md">{{Conferences }}</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
