--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -45,6 +45,6 @@
 </div>
    <!--- <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p> --->
     <div class="personalinfo">
-      <p> F.M.TorzewskaATleeds.ac.uk <br> <span style="font-size:50%;">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </span> </p>
+      <p> F.TorzewskaAToutlook.com <br> <span style="font-size:50%;">School of Mathematics, University of Leeds, Leeds,</em> LS2 9JT, UK. </span> </p>
 </div>
 </div>
